--- a/WebContent/hair-match.html
+++ b/WebContent/hair-match.html
@@ -12,16 +12,35 @@
         <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
         <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
-        <link href="../fontawesome-free-5.12.1-web/css/all.css" rel="stylesheet">
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
+        <script src="http://html2canvas.hertzen.com/dist/html2canvas.js"></script>
+        <link href="./fontawesome-free-5.12.1-web/css/all.css" rel="stylesheet">
         <script src="./static/js/hair-match.js"></script>
     </head>
 
     <body>
-        <div class="content">
+        <div id="content">
             <label class="btn btn-primary btn-setting">
-                <input type="file" name="picture" id="new-photo" style="display:none;" accept="image/*">
+                <input type="file" name="picture" id="upload-photo" style="display:none;" accept="image/*">
                 <i class="fas fa-image"></i> 上傳照片
             </label>
         </div>
+        <div id="face-align">
+            <ul class="icon">
+                <li><a href="#" id="plus-btn"><i class="fas fa-plus"></i></a></li>
+                <li><a href="#" id="minus-btn"><i class="fas fa-minus"></i></a></li>
+            </ul>
+            <div id="frame">
+                <img src="./static//img/face_frame.png" id="face-frame">
+                <img src="" id="edited-photo">
+            </div>
+            <input type="button" id="ok-btn" value="確定">
+        </div>
+        <fieldset>
+            <legend>圖檔</legend>
+            <div>
+            </div>
+        </fieldset>
     </body>
 </html>
