fix: modify api's name & wrong-txt's css

--- a/WebContent/forget-password.html
+++ b/WebContent/forget-password.html
@@ -6,7 +6,7 @@
         
         <title>月曆</title>
         <script src="./static/js/navbar.js"></script>
-        <script src="../static/js/lib/fetch-data.js"></script>
+        <script src="./static/js/lib/fetch-data.js"></script>
         <link rel="stylesheet" href="./static/css/all-setting.css">
         <link rel="stylesheet" href="./static/css/forget-password.css">
         <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
