fix: modify api url

--- a/WebContent/forget-password.html
+++ b/WebContent/forget-password.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         
-        <title>月曆</title>
+        <title>忘記密碼</title>
         <script src="./static/js/navbar.js"></script>
         <script src="./static/js/lib/fetch-data.js"></script>
         <link rel="stylesheet" href="./static/css/all-setting.css">
@@ -17,6 +17,9 @@
     </head>
 
     <body>
+	    <div id="loadingDiv"></div>
+		<img src="./static/img/loading.gif" id='loadingImg'>
+	    
         <div class="Splitter"> </div>
         <form id = "forget-password-form">
             <div class="form-group">
