--- a/WebContent/reset-password.html
+++ b/WebContent/reset-password.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         
-        <title>月曆</title>
+        <title>重設密碼</title>
         <script src="./static/js/navbar.js"></script>
         <script src="./static/js/lib/fetch-data.js"></script>
         <link rel="stylesheet" href="./static/css/all-setting.css">
