fix: finish hair match

--- a/WebContent/forget-password.html
+++ b/WebContent/forget-password.html
@@ -18,7 +18,7 @@
 
     <body>
 	    <div id="loadingDiv"></div>
-		<img src="./static/img/loading.gif" id='loadingImg'>
+		<img src="img/loading.gif" id='loadingImg'>
 	    
         <div class="Splitter"> </div>
         <form id = "forget-password-form">
