fix: fix wrong keyword searching and random function

--- a/WebContent/chatbot.html
+++ b/WebContent/chatbot.html
@@ -15,13 +15,13 @@
 
 </head>
 <body>
-    <div class="talk_con" id="talk_con_id">
-        <div class="talk_show" id="words">
+    <div class="talk-con" id="talk-con-id">
+        <div class="talk-show" id="words">
             <div class="atalk"><span id="asay">歡迎來到SearcHair聊天機器人</span></div>
         </div>
-        <div class="talk_input"  id="talk_input_id">
-            <input type="text" class="talk_word" id="talkwords" placeholder = "請輸入訊息" onkeypress="InputPress()">
-            <input type="button" value="發送" class="talk_sub" id="talksub">
+        <div class="talk-input"  id="talk-input-id">
+            <input type="text" class="talk-word" id="talkwords" placeholder = "請輸入訊息" onkeypress="inputPress()">
+            <input type="button" value="發送" class="talk-sub" id="talksub">
         </div>
     </div>
 </body>
