feat: add chatbot QA function

--- a/WebContent/chatbot.html
+++ b/WebContent/chatbot.html
@@ -17,7 +17,10 @@
 <body>
     <div class="talk-con" id="talk-con-id">
         <div class="talk-show" id="words">
-            <div class="atalk"><span id="asay">歡迎來到SearcHair聊天機器人</span></div>
+            <div class="atalk">
+            	<img class="chatbot-icon" src="img/chatbot.jpg">
+            	<span id="asay">Hello, 我是魔髮小聊</span>
+            </div>
         </div>
         <div class="talk-input"  id="talk-input-id">
             <input type="text" class="talk-word" id="talkwords" placeholder = "請輸入訊息" onkeypress="inputPress()">
