style: change the chatbot response content

--- a/WebContent/chatbot.html
+++ b/WebContent/chatbot.html
@@ -19,7 +19,7 @@
         <div class="talk-show" id="words">
             <div class="atalk">
             	<img class="chatbot-icon" src="img/chatbot.jpg">
-            	<span id="asay">Hello, 我是魔髮小聊</span>
+            	<span id="asay">嘿！我是魔髮小聊ヽ( ´∀`)ﾉ</span>
             </div>
         </div>
         <div class="talk-input"  id="talk-input-id">
