feat: finish record-chart & push prototype, and modify  edit photo page

--- a/WebContent/edit-photo.html
+++ b/WebContent/edit-photo.html
@@ -64,7 +64,8 @@
                         <div class="tab-pane fade" id="hair-color" role="tabpanel">
                             <div id="colorpicker"></div>
 		                    <form><input type="text" id="color_name" name="color_name" style="display: none;" value="#123456" maxlength="7"/></form>
-	
+							
+							<input type="color" id="color-value">
                         </div>
                         
                         <!-- face match -->
@@ -119,8 +120,8 @@
 	                <img src="" id="user-edited-photo" alt="你沒有上傳照片喔！">
                 </div>
                 <ul class="icon">
-                    <li><a href="#" id="plus-btn"><i class="fas fa-plus"></i></a></li>
-                    <li><a href="#" id="minus-btn"><i class="fas fa-minus"></i></a></li>
+                    <li><a href="#" id="plus-btn" title="放大髮型"><i class="fas fa-plus"></i></a></li>
+                    <li><a href="#" id="minus-btn" title="縮小髮型"><i class="fas fa-minus"></i></a></li>
                 </ul>
             </div>
         </div>
