--- a/WebContent/record-chart-detail.html
+++ b/WebContent/record-chart-detail.html
@@ -15,7 +15,7 @@
         <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
         <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
-        <script src="./static/js/record-chart.js"></script>
+        <script src="./static/js/record-chart-detail.js"></script>
     </head>
 
     <body>
