fix: modify record chart & setting and style hair match & calendar page

--- a/WebContent/calendar.html
+++ b/WebContent/calendar.html
@@ -50,14 +50,14 @@
                       <div class="tab-content" id="myTabContent">
                       
                         <div class="tab-pane fade show active" id="activity" role="tabpanel">
-							<table class="table table-borderless" id="aaa">
+							<table class="table table-borderless">
 							    <thead>
 							      <tr>
 							        <th class="color-display"></th>
-							        <th scope="col">時間</th>
-							        <th scope="col">活動</th>
+							        <th scope="col"></th>
+							        <th scope="col"></th>
 							      </tr>
-							    </thead>
+							    </thead>>
 							    <tbody id="activity-tbody"></tbody>
 							 </table>
                         </div>
@@ -68,8 +68,8 @@
                                 <thead>
                                   <tr>
                                     <th class="color-display"></th>
-                                    <th scope="col">金額</th>
-                                    <th scope="col">分類</th>
+                                    <th scope="col"></th>
+                                    <th scope="col"></th>
                                   </tr>
                                 </thead>
                                 <tbody id="cost-tbody"></tbody>
