--- a/WebContent/edit-photo.html
+++ b/WebContent/edit-photo.html
@@ -135,7 +135,7 @@
                         <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
-                    <div class="modal-body">
+                    <div class="modal-body to-center">
                         <img src="#" id="stored-img">
                         <h4>儲存成功！</h4>
                     	分享到～<a href="#" id="fb-link" target="_blank"><img src="img/facebook.png" id="fb-icon"></a>
