--- a/WebContent/record-chart.html
+++ b/WebContent/record-chart.html
@@ -22,15 +22,16 @@
         <div class="Splitter"> </div>
         
         <a href="cost.html" id="back"><img src="img/back.png"> 返回上一頁</a>   
-        <div id="cost-list">
-            <h4><span id="date"></span>花費</h4>    
-            <p>總金額：<span id="total-cost"></span>元</p>
-            <p>美髮：<span id="hairdress-cost"></span>元</p>
-            <p>商品：<span id="product-cost"></span>元</p>
-        </div>
-        
-		<div class="chart-container">
-		    <canvas id="chart"></canvas>
+        <div>
+	        <div id="cost-list">
+	            <h4><span id="date"></span>花費</h4>    
+	            <p>總金額：<span id="total-cost"></span>元</p>
+	            <p>美髮：<span id="hairdress-cost"></span>元</p>
+	            <p>商品：<span id="product-cost"></span>元</p>
+	        </div>
+			<div class="chart-container">
+			    <canvas id="chart"></canvas>
+			</div>
 		</div>
     </body>
 </html>
