--- a/WebContent/setting.html
+++ b/WebContent/setting.html
@@ -14,7 +14,7 @@
         <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
         <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
-        <link href="../fontawesome-free-5.12.1-web/css/all.css" rel="stylesheet">
+        <link href="./fontawesome-free-5.12.1-web/css/all.css" rel="stylesheet">
         <script src="./static/js/setting.js"></script>
     </head>
 
@@ -49,21 +49,14 @@
                 
                 <div class="tab-content">
                     <div class="tab-pane active" id="profile" role="tabpanel">
-                        <label class="btn btn-primary">
-                            <input type="file" name="picture" id="new-photo" style="display:none;" accept="image/*">
-                            <i class="fas fa-upload"></i> 選擇照片
-                        </label>
-                        <br>
-                        <img src="./static/img/test_photo.png">
-        
                         <div class="card">
                             <div class="card-body">
                                 <div id="profile-content">
-                                    名稱<br>
+									名稱<br>
                                     <input type="text" disabled="disabled" value="xxx"><br>
-                                    信箱<br>
+									 信箱<br>
                                     <input type="text" disabled="disabled" value="xxx123456789@gmail.com"><br>
-                                    密碼<br>
+ 									密碼<br>
                                     <a class="btn btn-primary" href="#update-password-modal" data-toggle="modal"><i class="far fa-edit"></i>修改</a>
                                 </div>
                             </div>
@@ -84,9 +77,11 @@
                     <div class="tab-pane" id="notify" role="tabpanel">
                         <h4>提醒</h4>
                         <div class="custom-control custom-switch">
-                            <input type="checkbox" class="custom-control-input" id="customSwitch1">
-                            <label class="custom-control-label" for="customSwitch1">每<input type="text" id="day">天提醒我一次記錄頭髮</label>
+                            <input type="checkbox" class="custom-control-input" id="notice-switch">
+                            <label class="custom-control-label" for="notice-switch">每<input type="number" id="day" value="1" min="1" disabled>天提醒我一次記錄頭髮</label>
                         </div>
+                        <br>
+                        <button type="button" id="update-notice-btn" class="btn btn-primary">確定</button>
                     </div>
                 </div>
             </div>
