style: add chatbot at page & revise stylist works modal css

--- a/WebContent/hair-condition.html
+++ b/WebContent/hair-condition.html
@@ -8,12 +8,16 @@
         <script src="./static/js/navbar.js"></script>
         <script src="./static/js/lib/fetch-data.js"></script>
         <script src="./static/js/auth.js"></script>
+        <script src="./static/js/chatbot-display.js"></script>
+        <script src="./static/js/chatbot.js"></script>
+        <link rel="stylesheet" href="./static/css/chatbot.css">
         <link rel="stylesheet" href="./static/css/all-setting.css">
         <link rel="stylesheet" href="./static/css/hair-condition.css">
         <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
         <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
         <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <link href="./fontawesome-free-5.12.1-web/css/all.css" rel="stylesheet">
         <script src="./static/js/month-init.js"></script>
         <script src="./static/js/hair-condition.js"></script>
     </head>
