--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,6 +8,9 @@
         <script src="./static/js/navbar.js"></script>
         <script src="./static/js/lib/fetch-data.js"></script>
         <script src="./static/js/auth.js"></script>
+        <script src="./static/js/chatbot-display.js"></script>
+        <script src="./static/js/chatbot.js"></script>
+        <link rel="stylesheet" href="./static/css/chatbot.css">
         <link rel="stylesheet" href="./static/css/all-setting.css">
         <link rel="stylesheet" href="./static/css/index.css">
         <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
@@ -25,8 +28,6 @@
             <a href="search-stylist-work.html" class="btn btn-outline-success"><img src="img/hairstyle.png"><br><span>搜尋髮型</span></a>
             <a href="recommend-product.html" class="btn btn-outline-primary"><img src="img/product.png"><br><span>推薦商品</span></a>
         	<br>
-        <!--</div>
-        <div class="all-link">-->
             <a href="hair-match.html" class="btn btn-outline-success"><i class="far fa-images"></i><br><span>hair-match</span></a>
             <a href="map.html" class="btn btn-outline-primary"><img src="img/map.png"><br><span>美髮地圖</span></a>
             <a href="chatroom.html" class="btn btn-outline-success"><i class="fas fa-comments"></i><br><span>聊天室</span></a>
@@ -37,5 +38,6 @@
         	<a href="#" class="btn btn-outline-success"><i class="fas fa-shoe-prints"></i><br><span>敬請期待..</span></a>
         	<a href="#" class="btn btn-outline-primary"><i class="fas fa-shoe-prints"></i><br><span>敬請期待..</span></a>
         </div>
+        
     </body>
 </html>
