--- a/WebContent/record-chart-detail.html
+++ b/WebContent/record-chart-detail.html
@@ -8,6 +8,9 @@
         <script src="./static/js/navbar.js"></script>
         <script src="./static/js/lib/fetch-data.js"></script>
         <script src="./static/js/auth.js"></script>
+        <script src="./static/js/chatbot-display.js"></script>
+        <script src="./static/js/chatbot.js"></script>
+        <link rel="stylesheet" href="./static/css/chatbot.css">
         <link rel="stylesheet" href="./static/css/all-setting.css">
         <link rel="stylesheet" href="./static/css/record-chart.css">
         <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
@@ -15,6 +18,7 @@
         <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
         <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+        <link href="./fontawesome-free-5.12.1-web/css/all.css" rel="stylesheet">
         <script src="./static/js/record-chart-detail.js"></script>
     </head>
 
