style: modify hair match RWD

--- a/WebContent/calendar.html
+++ b/WebContent/calendar.html
@@ -60,7 +60,7 @@
 							        <th scope="col"></th>
 							        <th scope="col"></th>
 							      </tr>
-							    </thead>>
+							    </thead>
 							    <tbody id="activity-tbody"></tbody>
 							 </table>
                         </div>
@@ -80,10 +80,7 @@
                         </div>
 
                         <div class="tab-pane fade" id="hair-condition" role="tabpanel">
-                        	<div id="hair-photo-div">
-                            <!-- <img src="img/blank.png" id="hair-photo" alt="還沒有新增照片喔！">
-                            <p id="hair-description"></p> -->
-                            </div>
+                        	<div id="hair-photo-div"></div>
                         </div>
                     </div>
                 </div>
