--- a/WebContent/edit-photo.html
+++ b/WebContent/edit-photo.html
@@ -22,6 +22,7 @@
         <link rel="stylesheet" href="https://l13013312333.github.io/FictionWeb/color/farbtastic.css" type="text/css" />
         <link rel="stylesheet" href="https://l13013312333.github.io/FictionWeb/color/jquery-ui.css">
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
         <script src="http://html2canvas.hertzen.com/dist/html2canvas.js"></script>
         <link href="./fontawesome-free-5.12.1-web/css/all.css" rel="stylesheet">
         <script src="./static/js/edit-photo.js"></script>
