--- a/WebContent/hair-match.html
+++ b/WebContent/hair-match.html
@@ -34,8 +34,14 @@
         </div>
         <div id="face-align">
             <ul class="icon">
-                <li><a href="#" id="plus-btn"><i class="fas fa-plus"></i> 放大照片</a></li>
-                <li><a href="#" id="minus-btn"><i class="fas fa-minus"></i> 縮小照片</a></li>
+                <li><a href="#" id="plus-btn"><i class="fas fa-plus"></i><span> 放大照片</span></a></li>
+                <li><a href="#" id="minus-btn"><i class="fas fa-minus"></i><span> 縮小照片</span></a></li>
+            </ul>
+            <ul class="arrow-icon">
+            	<a href="#" id="up-btn"><i class="fas fa-arrow-up"></i></a><br>
+            	<a href="#" id="left-btn"><i class="fas fa-arrow-left"></i></a>
+            	<a href="#" id="right-btn"><i class="fas fa-arrow-right"></i></a><br>
+            	<a href="#" id="down-btn"><i class="fas fa-arrow-down"></i></a>
             </ul>
             <div id="frame">
                 <img src="img/face_frame.png" id="face-frame">
