feat: finish push page

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,6 +8,7 @@
         <script src="./static/js/navbar.js"></script>
         <script src="./static/js/lib/fetch-data.js"></script>
         <script src="./static/js/auth.js"></script>
+        <script src="./static/js/all-push.js"></script>
         <script src="./static/js/chatbot-display.js"></script>
         <script src="./static/js/chatbot.js"></script>
         <link rel="stylesheet" href="./static/css/chatbot.css">
@@ -26,15 +27,15 @@
             <a href="search-salon.html" class="btn btn-outline-success"><i class="fas fa-home"></i><br><span>搜尋店家</span></a>
             <a href="search-stylist.html" class="btn btn-outline-primary"><i class="fas fa-users"></i><br><span>搜尋設計師</span></a>
             <a href="search-stylist-work.html" class="btn btn-outline-success"><img src="img/hairstyle.png"><br><span>搜尋髮型</span></a>
-            <a href="recommend-product.html" class="btn btn-outline-primary"><img src="img/product.png"><br><span>推薦商品</span></a>
+            <a href="calendar.html" class="btn btn-outline-primary"><i class="far fa-calendar-alt"></i><br><span>月曆</span></a>
         	<br>
             <a href="hair-match.html" class="btn btn-outline-success"><i class="far fa-images"></i><br><span>hair-match</span></a>
-            <a href="map.html" class="btn btn-outline-primary"><img src="img/map.png"><br><span>美髮地圖</span></a>
+        	<a href="push.html" class="btn btn-outline-primary new-link"><span class="badge badge-danger" style="display: none;" id="new-span">new</span><i class="far fa-envelope"></i><br><span>推播通知</span></a>
             <a href="chatroom.html" class="btn btn-outline-success"><i class="fas fa-comments"></i><br><span>聊天室</span></a>
-            <a href="calendar.html" class="btn btn-outline-primary"><i class="far fa-calendar-alt"></i><br><span>月曆</span></a>
+            <a href="recommend-product.html" class="btn btn-outline-primary"><img src="img/product.png"><br><span>推薦商品</span></a>
             <br>
             <a href="favorite.html" class="btn btn-outline-success"><i class="fab fa-gratipay"></i><br><span>我的最愛</span></a>
-        	<a href="push.html" class="btn btn-outline-primary"><i class="far fa-envelope"></i><br><span>推播通知</span></a>
+            <a href="map.html" class="btn btn-outline-primary"><img src="img/map.png"><br><span>美髮地圖</span></a>
         	<a href="#" class="btn btn-outline-success"><i class="fas fa-shoe-prints"></i><br><span>敬請期待..</span></a>
         	<a href="#" class="btn btn-outline-primary"><i class="fas fa-shoe-prints"></i><br><span>敬請期待..</span></a>
         </div>
