--- a/WebContent/push.html
+++ b/WebContent/push.html
@@ -26,29 +26,7 @@
         <div class="Splitter"> </div>
         <h1>推播通知</h1>
         <table class="table table-hover">
-        	<tbody id="push-tbody">
-        		<tr>
-					<td class="date">12</td>
-        			<td class="time">早上07:00<br>下午12:00</td>
-        			<td class="activity-name">給人編髮，拍美照</td>
-        			<td class="notice-time">一天後</td>
-        			<td class="close-button"><button class="btn btn-secondary">關閉通知</button></td>
-        		<tr>
-        		<tr>
-					<td class="date">13</td>
-        			<td class="time">早上07:00<br>下午15:30</td>
-        			<td class="activity-name">拍攝MV</td>
-        			<td class="notice-time">一天後</td>
-        			<td class="close-button"><button class="btn btn-secondary">關閉通知</button></td>
-        		<tr>
-        		<tr>
-					<td class="date">17</td>
-        			<td class="time">早上08:00<br>下午10:00</td>
-        			<td class="activity-name">去亂剪洗頭髮做造型</td>
-        			<td class="notice-time">一小時後</td>
-        			<td class="close-button"><button class="btn btn-secondary">關閉通知</button></td>
-        		<tr>
-        	</tbody>
+        	<tbody id="push-tbody"></tbody>
         </table>
     </body>
 </html>
