"style: modify button color & favorite icon

--- a/WebContent/salon-detail.html
+++ b/WebContent/salon-detail.html
@@ -58,7 +58,8 @@
                 <table>
                 	<tbody id= "stylist-and-works"></tbody>
                 </table>
-                <!-- <div id = "stylist-and-works"></div> -->
+                <br>
+        		<p>資料來源：<a href="https://style-map.com/">STYLEMAP</a></p>
         	</div>
     	</div>
     </body>
