--- a/WebContent/stylist-detail.html
+++ b/WebContent/stylist-detail.html
@@ -60,6 +60,7 @@
                 <h3>作品：</h3>
                 <hr>
                 <div id="work-cards"></div>
+        		<p>資料來源：<a href="https://style-map.com/">STYLEMAP</a></p>
             </div>
         </div>
 		
