feat: finish share photo's function & fix display of user's profile

--- a/WebContent/setting.html
+++ b/WebContent/setting.html
@@ -56,9 +56,9 @@
                             <div class="card-body">
                                 <div id="profile-content">
 									名稱<br>
-                                    <input type="text" disabled="disabled" value="xxx"><br>
+                                    <input type="text" disabled="disabled" id="profile-name" value="xxx"><br>
 									 信箱<br>
-                                    <input type="text" disabled="disabled" value="xxx123456789@gmail.com"><br>
+                                    <input type="text" disabled="disabled" id="profile-account"><br>
  									密碼<br>
                                     <a class="btn btn-primary" href="#update-password-modal" data-toggle="modal"><i class="far fa-edit"></i>修改</a>
                                 </div>
