--- a/WebContent/edit-photo.html
+++ b/WebContent/edit-photo.html
@@ -16,7 +16,6 @@
         <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
         <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
-        <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="https://l13013312333.github.io/FictionWeb/color/jquerycolor.js"></script>
         <script type="text/javascript" src="https://l13013312333.github.io/FictionWeb/color/farbtastic.js"></script>
         <link rel="stylesheet" href="https://l13013312333.github.io/FictionWeb/color/farbtastic.css" type="text/css" />
@@ -25,6 +24,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
         <script src="http://html2canvas.hertzen.com/dist/html2canvas.js"></script>
         <link href="./fontawesome-free-5.12.1-web/css/all.css" rel="stylesheet">
+        <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <script src="./static/js/edit-photo.js"></script>
     </head>
 
@@ -143,9 +143,35 @@
                         <img src="#" id="stored-img">
                         <h4>儲存成功！</h4>
                     	分享到～<a href="#" id="fb-link" target="_blank"><img src="img/facebook.png" id="fb-icon"></a>
+                    
+                    	<p>你願意分享照片給其他使用者參考嗎？</p>
+                    	<label><input type="radio" name="share" value="yes">同意</label><label><input type="radio" name="share" value="no">不同意</label>
+                    	<button type="button" class="btn btn-light" id="share-btn">確定</button>
+                    	<small id="share-msg" class="wrong-msg"></small> 
                     </div>
                     <div class="modal-footer">
                         <a href="hair-match.html" class="btn btn-primary" id="back-btn">返回hair-match首頁</a>
+                      </div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="modal fade" id="hairstyle-detail-modal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                      	 參考看看！
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body to-center">
+                        <img src="img/blank.png" id="random-user-photo">
+                        <p id="thanks-content"></p>
+                    </div>
+                    <div class="modal-footer">
+                    	<button type="button" class="btn btn-primary" id="random-btn">隨機更換照片！</button>
+                        <a href="#" class="btn btn-danger" id="apply-btn">套用</a>
                       </div>
                 </div>
             </div>
