--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -35,7 +35,8 @@
             <a href="recommend-product.html" class="btn btn-outline-primary"><img src="img/product.png"><br><span>推薦商品</span></a>
             <br>
             <a href="favorite.html" class="btn btn-outline-success"><i class="fab fa-gratipay"></i><br><span>我的最愛</span></a>
-            <a href="map.html" class="btn btn-outline-primary"><img src="img/map.png"><br><span>美髮地圖</span></a>
+            <!-- <a href="map.html" class="btn btn-outline-primary"><img src="img/map.png"><br><span>美髮地圖</span></a> -->
+        	<a href="#" class="btn btn-outline-primary"><i class="fas fa-shoe-prints"></i><br><span>敬請期待..</span></a>
         	<a href="#" class="btn btn-outline-success"><i class="fas fa-shoe-prints"></i><br><span>敬請期待..</span></a>
         	<a href="#" class="btn btn-outline-primary"><i class="fas fa-shoe-prints"></i><br><span>敬請期待..</span></a>
         </div>
