--- a/WebContent/favorite.html
+++ b/WebContent/favorite.html
@@ -70,34 +70,7 @@
                     </div>
 
                     <div class="tab-pane fade" id="product" role="tabpanel">
-                        <div class="row align-items-center">
-                            <div class="col-lg-4 col-md-6 mb-3">
-                                <div class="card">
-                                    <a href="#"><img class="favorite" src="img/favorite_undo.png" alt="favorite"></a> 
-                                    <a href="product-intro.html">
-                                    <img class="card-img-top" src="./static/img/test_photo3.png" alt="Card image cap">
-                                        <div class="card-body">
-                                            <p class="card-text">Ryo 呂滋養韌髮洗髮精(油性髮質適用)</p>
-                                            <p class="card-text">400ml</p>
-                                            <p class="card-text">NT$339</p>
-                                        </div> 
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-md-6 mb-3">
-                                <div class="card">
-                                    <a href="#"><img class="favorite" src="img/favorite_undo.png" alt="favorite"></a> 
-                                    <a href="product-intro.html">
-                                    <img class="card-img-top" src="./static/img/test_photo3.png" alt="Card image cap">
-                                        <div class="card-body">
-                                            <p class="card-text">Ryo 呂滋養韌髮洗髮精(油性髮質適用)</p>
-                                            <p class="card-text">400ml</p>
-                                            <p class="card-text">NT$339</p>
-                                        </div> 
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
+                    	<div class="row align-items-center" id="product-cards"></div>
                     </div>
                  </div>   
             </div>
