feat: finish edit product & fix product's link

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -36,7 +36,8 @@
             <br>
             <a href="favorite.html" class="btn btn-outline-success"><i class="fab fa-gratipay"></i><br><span>我的最愛</span></a>
             <!-- <a href="map.html" class="btn btn-outline-primary"><img src="img/map.png"><br><span>美髮地圖</span></a> -->
-        	<a href="#" class="btn btn-outline-primary"><i class="fas fa-shoe-prints"></i><br><span>敬請期待..</span></a>
+            <a href="https://drive.google.com/file/d/1jYj8W6NYQY3pwIA11jORxI_NArSmP5_E/view?usp=sharing" class="btn btn-outline-primary" target="_blank"><i class="far fa-file-alt"></i><br><span>說明文件</span></a>
+        	<!-- <a href="#" class="btn btn-outline-primary"><i class="fas fa-shoe-prints"></i><br><span>敬請期待..</span></a> -->
         	<a href="#" class="btn btn-outline-success"><i class="fas fa-shoe-prints"></i><br><span>敬請期待..</span></a>
         	<a href="#" class="btn btn-outline-primary"><i class="fas fa-shoe-prints"></i><br><span>敬請期待..</span></a>
         </div>
