--- a/WebContent/edit-photo.html
+++ b/WebContent/edit-photo.html
@@ -25,6 +25,7 @@
         <script src="http://html2canvas.hertzen.com/dist/html2canvas.js"></script>
         <link href="./fontawesome-free-5.12.1-web/css/all.css" rel="stylesheet">
         <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="./static/js/edit-photo.js"></script>
     </head>
 
