feat: save hair match attribute

--- a/WebContent/chatbot.html
+++ b/WebContent/chatbot.html
@@ -9,11 +9,14 @@
         <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
         <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <script src="./static/js/lib/fetch-data.js"></script>
-        <script src="./static/js/chatbot.js"></script>
+        
         <link rel="stylesheet" href="./static/css/chatbot.css">
+       
+</head>
+<!-- 
     <title>SearcHair聊天機器人</title>
 
-</head>
+
 <body>
     <div class="talk-con" id="talk-con-id">
         <div class="talk-show" id="words">
@@ -27,5 +30,5 @@
             <input type="button" value="發送" class="talk-sub" id="talksub">
         </div>
     </div>
-</body>
+</body> -->
 </html>
